--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "estoque-pwa",
+  "name": "estoque-pwa-firebase",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "firebase-admin": "^11.11.0"
   }
 }
